--- a/SYFilter/SYFilter/RAFiltMainButton.xib
+++ b/SYFilter/SYFilter/RAFiltMainButton.xib
@@ -22,7 +22,7 @@
                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="houseManage_filt_down" translatesAutoresizingMaskIntoConstraints="NO" id="n82-Ti-klK">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="filter_unselect" translatesAutoresizingMaskIntoConstraints="NO" id="n82-Ti-klK">
                     <rect key="frame" x="198.5" y="51" width="8" height="5"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="8" id="3s8-gh-OIU"/>
@@ -49,6 +49,6 @@
         </view>
     </objects>
     <resources>
-        <image name="houseManage_filt_down" width="9" height="6"/>
+        <image name="filter_unselect" width="7.5" height="5"/>
     </resources>
 </document>
